# doshTrade

./: .gitignore  README.md
client/: .eslintrc.js  .gitignore  apollo.config.js  package.json  schema.graphql  tsconfig.json
client/__generated__/: globalTypes.ts
client/public/: sw.js
client/src/: App.tsx  NotificationsProvider.tsx  constants.ts  useAuth.tsx
client/src/components/: CreatePropertyView.tsx  DashboardView.tsx  DebugButton.tsx  GeneratedResults.tsx  LoginView.tsx  OptionTable.tsx  PrivateModeStatsView.tsx  SideBar.tsx  SignUpView.tsx  StockListView.tsx  StockTableTypes.tsx  StockTableView.tsx  StockTableViewRow.tsx  TopBar.tsx  useStateMachine.tsx
client/src/components/__generated__/: CreatePropertyMutation.ts  GetDebug.ts  GetPropertiesQuery.ts  SendDemoNotification.ts
client/src/constants/: index.ts
client/src/containers/: EntryView.tsx  EntryViewStateSpec.tsx  HomeContainer.tsx  LoginContainer.tsx  MainPageContainer.tsx  SignUpContainer.tsx  StockListContainer.tsx  TransitionsModal.tsx
client/src/graphql/: getAvailableExpirations.gql  getCurrentPrice.gql  getExpiration.gql  getOptionChain.gql  getProperties.gql  getRiskSummary.gql  isAuth.gql  login.gql  notificationRequest.gql  oversoldStocks.gql  privateModeStats.gql  privateModeStatsByDate.gql  reversalAlerts.gql  signUp.gql  stockPrices.gql  yoloHandCuratedStocks.gql
client/src/graphql/__generated__/: IsAuth.ts  LoginMutation.ts  NotificationRequest.ts  OversoldStocks.ts  PrivateModeStatsByDateQuery.ts  (+12 more)
client/src/mocks/: mockData.tsx
client/src/push/: push-notifications.js  registerServiceWorker.ts  useLocalStorage.js  usePushNotifications.js
client/src/redux/: EntryViewStateSpec.tsx  actions.tsx  context.tsx  effects.tsx  reducers.tsx  types.tsx
client/src/util/: dateFormat.ts  guard.tsx  localStorage.tsx  sort.tsx
server/: .gitignore  Cargo.toml  README.md  dump.sql  private.pem  vapid_public.pem
server/migrations/: 20200718111257_base.sql
server/migrations/2020-04-23-002047_create_users/: up.sql
server/migrations/2020-04-26-185111_create_properties/: down.sql  up.sql
server/migrations/2020-04-27-041042_create_events/: up.sql
server/migrations/2020-06-13-041042_create_stocks/: up.sql
server/migrations/2020-06-14-185111_create_intraday_prices/: down.sql  up.sql
server/migrations/2020-07-12-161949_create_clients/: up.sql
server/migrations/2020-07-12-171257_create_client_subscriptions/: down.sql  up.sql
server/postgres/: postmaster.pid
server/postgres/base/13442/: 1247  1249  1259  16384  16390  16391  16393  16401  16402  16404  16406  16408  16414  16415  16417  16419  16425  16432  16433  16442  16443  16445  16447  16454  16466  16467  16473  16480  16487  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  (+22 more)
server/postgres/global/: 1260  pg_control  pg_internal.init
server/postgres/pg_stat_tmp/: db_0.stat  db_13442.stat  global.stat
server/src/: asyncgql.rs  auth.rs  background_tasks.rs  config.rs  db.rs  graphql.rs  handler.rs  main.rs  mock_option.rs  push_notification.rs
server/src/background_tasks/: fetch_options.rs  fetch_tickers.rs  mod.rs  options_actor.rs  push_notifications_actor.rs  send_push_notifications.rs  stock_actor.rs
server/src/models/: client.rs  client_subscription.rs  event.rs  intraday_price.rs  mod.rs  option.rs  property.rs  schema.rs  stock.rs  user.rs
