[package]
name = "doshtrade_server"
version = "1.0.0"
authors = ["Eric Semeniuc <3838856+esemeniuc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "migrate"] }
rust-embed = "5.9.0"
log = "0.4.13"
env_logger = "0.8.2"
itertools = "0.10.0"

async-graphql = "2.5.1"
async-graphql-actix-web = "2.5.1"
actix = "0.10.0"
actix-cors = "0.5.4"
actix-web = { version = "3.3.2", features = ["rustls"] }
actix-web-actors = "3.0.0"
futures = "0.3.12"
mime_guess = "2.0.3"
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = "7.2.0"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.8.2"
clap = "2.33.3"
web-push = "0.7.2"
base64 = "0.13.0"
ta = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
#rsi-rs = "0.1.0"
#ta-common = "0.1.3"
#ta-lib-wrapper = "0.2.0"